--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
         }
 
         #map {
-            flex-grow: 1;
-            width: calc(100% - 320px);
-            
+            height: 100%;
+            width: 100%;
+            /* position:relative; */
+
+        }
+
+        #side-panel {
+            /* position: absolute; */
+            /* margin:0%; */
+            /* top: 30px; */
+            /* right: 25px; */
+            /* width: 25%; */
+            /* max-height: 90%; */
+            background-color: white;
+            padding: 0;
+            /* border-radius: 8px; */
+            overflow-y: scroll;
+            /*z-index: 999;*/
         }
 
         button {
@@ -51,25 +66,19 @@
             background-color: #f2f2f2;
         }
 
-        #side-panel {
-            position: absolute;
-            top: 30px;
-            right: 25px;
-            width: 25%;
-            max-height: 90%;
-            background-color: white;
-            padding: 0;
-            border-radius: 8px;
-            overflow-y: scroll;
-            z-index: 999;
+        @media screen and (max-width: 1024px) {
+            #side-panel {
+                display: none;
+            }
         }
-
+   
         
     </style>
 </head>
 
 <body>
     <main id="container">
+        <div id="map"></div>
         <div id="table">
 
             <h2>US Earthquake List</h2>
@@ -85,7 +94,6 @@
             </table>
 
         </div>
-        <div id="map"></div>
 
     </main>
     <script>
@@ -102,7 +110,7 @@
         async function geojsonFetch() {
 
 
-            let response = await fetch('assets/earthquake-US.json');
+            let response = await fetch('assets/US-earthquake2.json');
 
             if (!response.ok) {
                 throw new Error(`HTTP error! status: ${response.status}`);
