--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             background-color: #f2f2f2;
         }
 
-        @media screen and (max-width: 1024px) {
-            #side-panel {
+        @media (max-width: 1024px) {
+            #table {
                 display: none;
             }
         }
-   
+
         
     </style>
 </head>
